# finbot_django

./: Dockerfile  README.md  pyproject.toml
finbot_django/: .env.example  manage.py
finbot_django/finbot_django/: asgi.py  settings.py  urls.py  wsgi.py
finbot_django/main/: admin.py  forms.py  models.py  services.py  views.py
finbot_django/main/migrations/: 0001_initial.py  0002_transaction_delete_event_delete_transactions.py
finbot_django/main/templates/main/: _two_charts_example.html  index.html  index_backup.html  index_backup_2.html  my_form.html
