[tool.poetry]
name = "finbot-django"
version = "0.1.0"
description = ""
authors = ["Rus Esakov <eucle@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.1,<5.0"
psycopg = "^3.1.12"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
